kubernetes/apps/flux-system/flux-operator/manifests/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas-9iu.pages.dev/gateway.networking.k8s.io/httproute_v1beta1.json
{
  apiVersion: "gateway.networking.k8s.io/v1",
  kind: "HTTPRoute",
  metadata: {
    name: "flux-web",
  },
  spec: {
    hostnames: [
      "flux.darkfellanetwork.com",
    ],
    parentRefs: [{
      name: "internal",
      namespace: "envoy-gateway-system",
    }],
    rules: [{
      backendRefs: [{
        name: "flux-operator",
        namespace: "flux-system",
        port: 9080,
      }],
    }],
  },
}
